--- a/JupyterNotebooks_DataVisualisation/Dataframes_ChordDiagram_Holoviews.ipynb
+++ b/JupyterNotebooks_DataVisualisation/Dataframes_ChordDiagram_Holoviews.ipynb
@@ -24,7 +24,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "uAHtmpXpxqKc"
+    "id": "VdPWJDsvxi9a"
    },
    "source": [
     "Step 2: Install additional packages"
@@ -32,132 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 73,
    "metadata": {
-    "id": "WpiuofaXxtRF",
+    "id": "lCdr5pdfxmpU",
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pandas in /opt/conda/lib/python3.8/site-packages (1.5.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in /opt/conda/lib/python3.8/site-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /opt/conda/lib/python3.8/site-packages (from pandas) (2022.4)\n",
-      "Requirement already satisfied: numpy>=1.20.3 in /opt/conda/lib/python3.8/site-packages (from pandas) (1.23.3)\n",
-      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.8/site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3.2\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
-      "Collecting openpyxl\n",
-      "  Downloading openpyxl-3.1.2-py2.py3-none-any.whl (249 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m250.0/250.0 kB\u001b[0m \u001b[31m12.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hCollecting et-xmlfile (from openpyxl)\n",
-      "  Downloading et_xmlfile-1.1.0-py3-none-any.whl (4.7 kB)\n",
-      "Installing collected packages: et-xmlfile, openpyxl\n",
-      "Successfully installed et-xmlfile-1.1.0 openpyxl-3.1.2\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3.2\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
-      "Collecting holoviews\n",
-      "  Downloading holoviews-1.17.1-py2.py3-none-any.whl.metadata (21 kB)\n",
-      "Collecting param<3.0,>=1.12.0 (from holoviews)\n",
-      "  Downloading param-2.0.2-py3-none-any.whl.metadata (5.9 kB)\n",
-      "Requirement already satisfied: numpy>=1.0 in /opt/conda/lib/python3.8/site-packages (from holoviews) (1.23.3)\n",
-      "Collecting pyviz-comms>=0.7.4 (from holoviews)\n",
-      "  Downloading pyviz_comms-3.0.1-py3-none-any.whl.metadata (7.5 kB)\n",
-      "Collecting panel>=0.13.1 (from holoviews)\n",
-      "  Downloading panel-1.2.3-py2.py3-none-any.whl.metadata (22 kB)\n",
-      "Collecting colorcet (from holoviews)\n",
-      "  Downloading colorcet-3.0.1-py2.py3-none-any.whl (1.7 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.7/1.7 MB\u001b[0m \u001b[31m67.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: packaging in /opt/conda/lib/python3.8/site-packages (from holoviews) (21.3)\n",
-      "Requirement already satisfied: pandas>=0.20.0 in /opt/conda/lib/python3.8/site-packages (from holoviews) (1.5.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in /opt/conda/lib/python3.8/site-packages (from pandas>=0.20.0->holoviews) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /opt/conda/lib/python3.8/site-packages (from pandas>=0.20.0->holoviews) (2022.4)\n",
-      "Collecting bokeh<3.3.0,>=3.1.1 (from panel>=0.13.1->holoviews)\n",
-      "  Downloading bokeh-3.1.1-py3-none-any.whl (8.3 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m8.3/8.3 MB\u001b[0m \u001b[31m88.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0mm\n",
-      "\u001b[?25hCollecting xyzservices>=2021.09.1 (from panel>=0.13.1->holoviews)\n",
-      "  Downloading xyzservices-2023.10.1-py3-none-any.whl.metadata (4.0 kB)\n",
-      "Collecting markdown (from panel>=0.13.1->holoviews)\n",
-      "  Downloading Markdown-3.5.2-py3-none-any.whl.metadata (7.0 kB)\n",
-      "Requirement already satisfied: markdown-it-py in /opt/conda/lib/python3.8/site-packages (from panel>=0.13.1->holoviews) (3.0.0)\n",
-      "Collecting linkify-it-py (from panel>=0.13.1->holoviews)\n",
-      "  Downloading linkify_it_py-2.0.2-py3-none-any.whl (19 kB)\n",
-      "Collecting mdit-py-plugins (from panel>=0.13.1->holoviews)\n",
-      "  Downloading mdit_py_plugins-0.4.0-py3-none-any.whl.metadata (2.7 kB)\n",
-      "Requirement already satisfied: requests in /opt/conda/lib/python3.8/site-packages (from panel>=0.13.1->holoviews) (2.28.1)\n",
-      "Requirement already satisfied: tqdm>=4.48.0 in /opt/conda/lib/python3.8/site-packages (from panel>=0.13.1->holoviews) (4.64.1)\n",
-      "Requirement already satisfied: bleach in /opt/conda/lib/python3.8/site-packages (from panel>=0.13.1->holoviews) (5.0.1)\n",
-      "Requirement already satisfied: typing-extensions in /opt/conda/lib/python3.8/site-packages (from panel>=0.13.1->holoviews) (4.4.0)\n",
-      "Collecting pyct>=0.4.4 (from colorcet->holoviews)\n",
-      "  Downloading pyct-0.5.0-py2.py3-none-any.whl (15 kB)\n",
-      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /opt/conda/lib/python3.8/site-packages (from packaging->holoviews) (3.0.9)\n",
-      "Requirement already satisfied: Jinja2>=2.9 in /opt/conda/lib/python3.8/site-packages (from bokeh<3.3.0,>=3.1.1->panel>=0.13.1->holoviews) (3.1.2)\n",
-      "Requirement already satisfied: contourpy>=1 in /opt/conda/lib/python3.8/site-packages (from bokeh<3.3.0,>=3.1.1->panel>=0.13.1->holoviews) (1.0.5)\n",
-      "Requirement already satisfied: pillow>=7.1.0 in /opt/conda/lib/python3.8/site-packages (from bokeh<3.3.0,>=3.1.1->panel>=0.13.1->holoviews) (9.2.0)\n",
-      "Requirement already satisfied: PyYAML>=3.10 in /opt/conda/lib/python3.8/site-packages (from bokeh<3.3.0,>=3.1.1->panel>=0.13.1->holoviews) (6.0)\n",
-      "Requirement already satisfied: tornado>=5.1 in /opt/conda/lib/python3.8/site-packages (from bokeh<3.3.0,>=3.1.1->panel>=0.13.1->holoviews) (6.1)\n",
-      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.8/site-packages (from python-dateutil>=2.8.1->pandas>=0.20.0->holoviews) (1.16.0)\n",
-      "Requirement already satisfied: webencodings in /opt/conda/lib/python3.8/site-packages (from bleach->panel>=0.13.1->holoviews) (0.5.1)\n",
-      "Collecting uc-micro-py (from linkify-it-py->panel>=0.13.1->holoviews)\n",
-      "  Downloading uc_micro_py-1.0.2-py3-none-any.whl (6.2 kB)\n",
-      "Requirement already satisfied: importlib-metadata>=4.4 in /opt/conda/lib/python3.8/site-packages (from markdown->panel>=0.13.1->holoviews) (4.11.4)\n",
-      "Requirement already satisfied: mdurl~=0.1 in /opt/conda/lib/python3.8/site-packages (from markdown-it-py->panel>=0.13.1->holoviews) (0.1.2)\n",
-      "Requirement already satisfied: charset-normalizer<3,>=2 in /opt/conda/lib/python3.8/site-packages (from requests->panel>=0.13.1->holoviews) (2.1.1)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /opt/conda/lib/python3.8/site-packages (from requests->panel>=0.13.1->holoviews) (3.4)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /opt/conda/lib/python3.8/site-packages (from requests->panel>=0.13.1->holoviews) (1.26.11)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/lib/python3.8/site-packages (from requests->panel>=0.13.1->holoviews) (2023.7.22)\n",
-      "Requirement already satisfied: zipp>=0.5 in /opt/conda/lib/python3.8/site-packages (from importlib-metadata>=4.4->markdown->panel>=0.13.1->holoviews) (3.9.0)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in /opt/conda/lib/python3.8/site-packages (from Jinja2>=2.9->bokeh<3.3.0,>=3.1.1->panel>=0.13.1->holoviews) (2.0.1)\n",
-      "Downloading holoviews-1.17.1-py2.py3-none-any.whl (4.3 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.3/4.3 MB\u001b[0m \u001b[31m111.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hDownloading panel-1.2.3-py2.py3-none-any.whl (20.1 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m20.1/20.1 MB\u001b[0m \u001b[31m70.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0mm\n",
-      "\u001b[?25hDownloading param-2.0.2-py3-none-any.whl (113 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m113.6/113.6 kB\u001b[0m \u001b[31m28.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading pyviz_comms-3.0.1-py3-none-any.whl (82 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m82.8/82.8 kB\u001b[0m \u001b[31m29.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading xyzservices-2023.10.1-py3-none-any.whl (56 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m56.3/56.3 kB\u001b[0m \u001b[31m22.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading Markdown-3.5.2-py3-none-any.whl (103 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m103.9/103.9 kB\u001b[0m \u001b[31m4.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading mdit_py_plugins-0.4.0-py3-none-any.whl (54 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m54.1/54.1 kB\u001b[0m \u001b[31m19.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: xyzservices, uc-micro-py, param, pyviz-comms, pyct, mdit-py-plugins, markdown, linkify-it-py, colorcet, bokeh, panel, holoviews\n",
-      "  Attempting uninstall: bokeh\n",
-      "    Found existing installation: bokeh 2.4.3\n",
-      "    Uninstalling bokeh-2.4.3:\n",
-      "      Successfully uninstalled bokeh-2.4.3\n",
-      "Successfully installed bokeh-3.1.1 colorcet-3.0.1 holoviews-1.17.1 linkify-it-py-2.0.2 markdown-3.5.2 mdit-py-plugins-0.4.0 panel-1.2.3 param-2.0.2 pyct-0.5.0 pyviz-comms-3.0.1 uc-micro-py-1.0.2 xyzservices-2023.10.1\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3.2\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
-      "Requirement already satisfied: bokeh in /opt/conda/lib/python3.8/site-packages (3.1.1)\n",
-      "Requirement already satisfied: Jinja2>=2.9 in /opt/conda/lib/python3.8/site-packages (from bokeh) (3.1.2)\n",
-      "Requirement already satisfied: contourpy>=1 in /opt/conda/lib/python3.8/site-packages (from bokeh) (1.0.5)\n",
-      "Requirement already satisfied: numpy>=1.16 in /opt/conda/lib/python3.8/site-packages (from bokeh) (1.23.3)\n",
-      "Requirement already satisfied: packaging>=16.8 in /opt/conda/lib/python3.8/site-packages (from bokeh) (21.3)\n",
-      "Requirement already satisfied: pandas>=1.2 in /opt/conda/lib/python3.8/site-packages (from bokeh) (1.5.0)\n",
-      "Requirement already satisfied: pillow>=7.1.0 in /opt/conda/lib/python3.8/site-packages (from bokeh) (9.2.0)\n",
-      "Requirement already satisfied: PyYAML>=3.10 in /opt/conda/lib/python3.8/site-packages (from bokeh) (6.0)\n",
-      "Requirement already satisfied: tornado>=5.1 in /opt/conda/lib/python3.8/site-packages (from bokeh) (6.1)\n",
-      "Requirement already satisfied: xyzservices>=2021.09.1 in /opt/conda/lib/python3.8/site-packages (from bokeh) (2023.10.1)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in /opt/conda/lib/python3.8/site-packages (from Jinja2>=2.9->bokeh) (2.0.1)\n",
-      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /opt/conda/lib/python3.8/site-packages (from packaging>=16.8->bokeh) (3.0.9)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in /opt/conda/lib/python3.8/site-packages (from pandas>=1.2->bokeh) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /opt/conda/lib/python3.8/site-packages (from pandas>=1.2->bokeh) (2022.4)\n",
-      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.8/site-packages (from python-dateutil>=2.8.1->pandas>=1.2->bokeh) (1.16.0)\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3.2\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "## install packages that are not part of Python's standard distribution\n",
+    "# install packages that are not part of Python's standard distribution\n",
     "\n",
     "!pip install pandas\n",
     "!pip install openpyxl\n",
@@ -209,7 +91,7 @@
     "id": "kG4qGCIQx0Z4"
    },
    "source": [
-    "Step 4: Plot chord diagram with Holoviews and 3DBlocks"
+    "Step 4: Plot chord diagram with Holoviews"
    ]
   },
   {
@@ -1068,6 +950,7 @@
     "\n",
     "import holoviews as hv\n",
     "from holoviews import opts, dim\n",
+    "import bokeh\n",
     "\n",
     "# Load the bokeh extension for holoviews\n",
     "hv.extension('bokeh')\n",
